manifests/gateway-api-network-policy-demo/nginx-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-demo
  namespace: default
  labels:
    app: nginx-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-demo
  template:
    metadata:
      labels:
        app: nginx-demo
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo
  namespace: default
spec:
  selector:
    app: nginx-demo
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-demo
  namespace: default
spec:
  parentRefs:
    - name: cilium
      sectionName: https
      namespace: kube-system
  hostnames:
    - $HTTPROUTE_HOSTNAME
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-demo
          port: 80


#---
#apiVersion: cilium.io/v2
#kind: CiliumClusterwideNetworkPolicy
# metadata:
#   name: default-deny
# spec:
#   description: "Default deny all traffic except DNS"
#   endpointSelector:
#     matchExpressions:
#       - key: io.kubernetes.pod.namespace
#         operator: NotIn
#         values:
#           - kube-system
#   egress:
#     - toEndpoints:
#         - matchLabels:
#             io.kubernetes.pod.namespace: kube-system
#             k8s-app: kube-dns
#       toPorts:
#         - ports:
#             - port: "53"
#               protocol: UDP
#           rules:
#             dns:
#               - matchPattern: "*"

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nginx-demo-auth
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: nginx-demo
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            io.kubernetes.pod.namespace: kube-prometheus-stack
      authentication:
        mode: "required"
    - fromEntities:
        - ingress
